--- a/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/admin/admin.component.html
@@ -421,7 +421,7 @@
               <td>{{s.resenia.length}}</td>
               <td>{{s.reservas.length }}</td>
               <td>
-                <button type="button" class="form-control bg-info">Modificar</button>
+           
                 <button type="button" class="form-control bg-danger">Eliminar</button>
               </td>
             </tr>
@@ -463,7 +463,7 @@
     <!-- Tabla Reservas -->
     <div class="col-lg-12 col-md-12 col-12" *ngIf="tablaSeleccionada === 'reservas'">
       <div class="col-lg-12 col-md-12 col-12 mb-4">
-        <div class="accordion mt-1" id="accordionExample" *ngIf="tablaSeleccionada === 'reservas'">
+        <div class="accordion mt-1" id="accordionExample" *ngIf="tablaSeleccionada != 'reservas'">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="btn w-100 text-start mx-1" type="button" (click)="cargarGestores()">
