--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -171,7 +171,7 @@
                             <td>
                                 <p *ngIf="reserva.reservado;else noReservado" style="color: blue;">Reservado</p>
                                 <ng-template #noReservado>
-                                    <p style="color:red;">Canselado</p>
+                                    <p style="color:red;">Cancelado</p>
                                 </ng-template>
                             </td>
                             <td>{{reserva.fechaIngreso}}</td>
