se buen cambios de usuario y getor en su posision de css

--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.css
@@ -6,6 +6,9 @@ a {
 .navbar {
   background: linear-gradient(to left, #ffa500, #664d03);
   padding: 0;
+  position: sticky;
+  top:0;
+  z-index: 100;
 }
 
 .navbar-nav .nav-link:hover {
