--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -22,7 +22,7 @@
                     <ul *ngIf="tipo =='user'" class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" [routerLink]="['usuario/datos']">MIS DATOS</a></li>
                         <li><a class="dropdown-item" [routerLink]="['usuario']">MIS RESERVAS</a></li>
-                        <li><a class="dropdown-item" [routerLink]="['usuario/resenias']">MIS RESENIAS</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['usuario/resenia']">MIS RESENIAS</a></li>
                         <li class="dropdown-divider"></li>                                             
                         <li><a class="dropdown-item" [routerLink]="['home']" routerLinkActive="active" (click)="logout()">CERRAR SESION</a></li>
                     </ul>
