--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.css
@@ -2,7 +2,7 @@
     background-image: url('../../../../assets/fondo-usuario/al-mundo.jpg');
     width: 100%;
     height: 100%;  
-    position: fixed;
+    position: absolute;
     background-position: center;
     background-size: cover;
     overflow-y: auto;
