--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
@@ -1,11 +1,11 @@
 .font-usuario{
   background-image: url('../../../../assets/fondo-usuario/al-mundo.jpg');
   width: 100%;
-  height: 100%;  
-  position: fixed;
   background-position: center;
   background-size: cover;
   overflow-y: auto;
+  height: 100%;
+  position: absolute;
 }
 .title{
     font-style: italic;
