--- a/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/header/header.component.html
@@ -8,12 +8,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link"  *ngIf="tipo !== 'admin'" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
+                    <a class="nav-link"  *ngIf="tipo !== 'admin'  && tipo !== 'gest'" aria-current="page" [routerLink]="['servicio']">SERVICIOS</a>
                 </li>
 
-                <li class="nav-item" routerLinkActive="active">
+                <!-- <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link"  *ngIf="tipo !== 'admin' && tipo !== 'user'" aria-current="page">INFORMACION</a>
-                </li>
+                </li> -->
 
                 <li class="nav-item dropdown" routerLinkActive="active">
                     <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
