--- a/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
+++ b/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
@@ -10,3 +10,21 @@
 .opacidad {
     background-color: white;
 }
+
+/**
+    FONDO FORMULARIO
+*/
+.background-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
