--- a/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor-datos/gestor-datos.component.css
@@ -1,6 +1,6 @@
 .fondo-usuario{
     background-image: url("../../../../assets/fondo-home/fondo-buenosaires.jpg");
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     background-size: cover;
