--- a/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/gestor/gestor.component.html
@@ -68,7 +68,7 @@
                     <td> <a class="link" (click)="cargarResenias(ser._id)">Ver Resenias</a> </td>
                     <td>
                         <button class="btn btn-info mx-1" >Modificar</button>
-                        <button class="btn btn-danger mx-1">Dar de Baja</button>
+                        <button class="btn btn-danger mx-1" (click)="eliminarServicio(ser._id)" >Dar de Baja</button>
                     </td>
                 </tr>
             </tbody>
@@ -94,7 +94,7 @@
 </div>
 </div>
 <div class="row" *ngIf="verReserva">
-  <div class="tabla-contenedor-resenias col-8 offset-3">
+  <div class="tabla-contenedor-resenias col-12 col-md-10 offset-md-1">
     <table class="table table-striped">
         <thead>
             <tr>
