--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -103,7 +103,7 @@
                                 Estado De las Reservas
                             </button>
                         </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse show"
+                        <div id="collapseTwo" class="accordion-collapse collapse"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <select class="form-select mt-1 mb-1 mx-1" aria-label="Default select example"
@@ -153,7 +153,7 @@
                 </div>
             </div>
 
-            <div class="tabla-contenedor col-lg-7 col-md-9 col-12">
+            <div class="tabla-contenedor col-lg-7 offset-lg-1 col-md-9 col-12">
                 <table class="table table-hover">
                     <thead>
                         <tr>
