--- a/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
+++ b/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
@@ -1,3 +1,9 @@
+.fondo-servicio{
+    background-image: url("../../../assets/fondo-usuario/al-mundo.jpg");
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 
 @media only screen and (min-width: 576px) {
     .formulario-gestor {
@@ -8,5 +14,5 @@
 }
 
 .opacidad {
-    background-color: white;
+    background-color:rgba(240, 248, 255, 0.662);
 }
