--- a/frontend/front-tpfinal/src/app/components/resenias/resenia-form/resenia-form.component.html
+++ b/frontend/front-tpfinal/src/app/components/resenias/resenia-form/resenia-form.component.html
@@ -1,6 +1,7 @@
-<p>resenia-form works!</p>
 <!--***** formulario ****-->
-
+<body>
+    <br>
+    <br>
 <div id="tab" class="container card">
     <div class="row  justify-content-center mt-3">
         <h2 class="col-md-12">comentar</h2>
@@ -96,3 +97,4 @@
         </form>
     </div>
 </div>
+</body>
