--- a/frontend/front-tpfinal/src/app/components/layout/footer/footer.component.html
+++ b/frontend/front-tpfinal/src/app/components/layout/footer/footer.component.html
@@ -1,10 +1,58 @@
 <!-- PIE DE PAGINA -->
-<footer class="bg-black text-center footer py-4">
-    <div class="container">
-            <div class="text-white">
-                    © 2023 Copyright:
-                    <a class="text-white">GRUPO10</a>
-                    | TPFINAL
-            </div>
-    </div>
-</footer>
+<section class="">
+        <!-- Footer -->
+        <footer class="text-white" style="background-color: #8c2d0d;">
+                <!-- Grid container -->
+                <div class="container p-4">
+                        <!--Grid row-->
+                        <div class="row">
+                                <!--Grid column-->
+                                <h5 class="text-center">Links Github</h5>
+                                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+
+                                        <ul class="list-unstyled mb-0">
+                                                <li>
+                                                        <a href="https://github.com/rochadgps" class="text-white">Rocha-Cristian</a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://github.com/userJoA" class="text-white">Galalrdo Alejandro</a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://github.com/kevinpaco" class="text-white">Kevin Paco</a>
+                                                </li>
+
+                                        </ul>
+                                </div>
+                                <!--Grid column-->
+
+                                <!--Grid column-->
+                                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+
+                                        <ul class="list-unstyled">
+                                                <li>
+                                                        <a href="https://github.com/NatanielCZN" class="text-white">Nataniel Cazon</a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://github.com/Facuxfs" class="text-white">Facundo Romero</a>
+                                                </li>
+                                                <li>
+                                                        <a href="https://github.com/Taskmaster01" class="text-white">Alvaro Gaspar</a>
+                                                </li>
+                                        </ul>
+                                </div>
+                                <!--Grid column-->
+                        </div>
+                        <!--Grid row-->
+                </div>
+                <!-- Grid container -->
+
+                <!-- Copyright -->
+                <div class="text-center p-3" style="background-color: #7c260a;">
+                        2023-Pagina Turistica
+                        <a class="text-white"
+                                href="https://github.com/NatanielCZN/PySW-TPFinal-Grupo10.git">CodeGithub</a>
+                </div>
+                <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+</section>
