--- a/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
+++ b/frontend/front-tpfinal/src/app/components/servicio-form/servicio-form.component.css
@@ -1,4 +1,10 @@
-
+.fondo-servicio{
+    background-image: url("/assets/fondo-home/fondo-buenosaires.jpg");
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+    margin-top: -24px;
+}
 @media only screen and (min-width: 576px) {
     .formulario-gestor {
         width: 500px;
@@ -8,5 +14,5 @@
 }
 
 .opacidad {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.396);
 }
