--- a/frontend/front-tpfinal/src/app/components/reserva-form/reserva-form.component.css
+++ b/frontend/front-tpfinal/src/app/components/reserva-form/reserva-form.component.css
@@ -1,5 +1,5 @@
 .font-reserva{
-    background-image: url('../../../assets/fondo-usuario/al-mundo.jpg');
+    background-image: url('/assets/fondo-usuario/al-mundo.jpg');
     position: absolute;
     width: 100%;
     height: 100%;
