--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
@@ -1,5 +1,5 @@
 .font-usuario{
-  background-image: url('../../../../assets/fondo-usuario/al-mundo.jpg');
+  background-image: url('/assets/fondo-usuario/al-mundo.jpg');
   width: 100%;
   background-position: center;
   background-size: cover;
