--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.html
@@ -1,5 +1,8 @@
 <div class="font-usuario">
-    <div class="container-fluid">
+    <div class="container">
+
+        <img src="/assets/fondo-login/login-formulario-gestor.jpg" alt="Fondo" class="background-image">
+
         <!--<div class="row col-12">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
