--- a/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
+++ b/frontend/front-tpfinal/src/app/components/roles/usuario/usuario.component.css
@@ -53,3 +53,21 @@
   .accordion .accordion-item .accordion-header .accordion-button:hover{
     background-color: rgba(251, 10, 26, 0.391);
   }
+
+  /**
+    FONDO FORMULARIO
+*/
+.background-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
